# VC-SLAM

./: README.md
Cloud-SLAM/: .gitignore  README.md  environment.yml
Cloud-SLAM/src/edgecloud/: CMakeLists.txt  package.xml
Cloud-SLAM/src/edgecloud/scripts/: cloud_slam.py  cloud_slam_kan.py  downsample_feat_match.py  droid_modified.py  pcddownsample.py  stat_bandwidth copy.py  test.py  test.xyz  util_conversion_dev.py  utils_yal.py
Cloud-SLAM/src/edgecloud/scripts/confs/: base.conf  base1.conf
Cloud-SLAM/src/edgecloud/scripts/models/: chebykan_network.py  dataset.py  fields.py
Cloud-SLAM/src/msg_action/: CMakeLists.txt
Cloud-SLAM/src/msg_action/msgs/: CloudMap.msg  Descriptor.msg  MapPoint.msg  Observation.msg
Cloud-SLAM/src/msg_action/src/: client.cpp
Edge-SLAM/: README.md
Edge-SLAM/Cloud-Edge-SLAM/Cloud-Edge-SLAM-master/: .gitignore  README.md
Edge-SLAM/Cloud-Edge-SLAM/Cloud-Edge-SLAM-master/src/cloud_edge_slam/: CMakeLists.txt
Edge-SLAM/Cloud-Edge-SLAM/Cloud-Edge-SLAM-master/src/cloud_edge_slam/config/: ceiling.yaml  icl.yaml  lab.yaml
Edge-SLAM/Cloud-Edge-SLAM/Cloud-Edge-SLAM-master/src/cloud_edge_slam/launch/: main.launch  main2.launch  main3.launch  main_luo.launch  main（复件）.launch
Edge-SLAM/Cloud-Edge-SLAM/Cloud-Edge-SLAM-master/src/cloud_edge_slam/lib_src/: Atlas.cc  CloudImageSampler.cc  Map.cc  (+11 more)
Edge-SLAM/Udf-Edge/: environment.yml
Edge-SLAM/Udf-Edge/src/: CMakeLists.txt
Edge-SLAM/Udf-Edge/src/cap-edge/: ceshi3.npy  ceshi3.xyz  ckpt_040000.pth  downsample.py  edge.py  edge_base.py  test.py  time.txt
Edge-SLAM/Udf-Edge/src/cap-edge/confs/: base.conf  base1.conf
Edge-SLAM/Udf-Edge/src/cap-edge/models/: dataset.py  kan_network.py
Edge-SLAM/Udf-Edge/src/msg_action/: CMakeLists.txt  package.xml
Edge-SLAM/Udf-Edge/src/msg_action/msgs/: CloudMap.msg  KeyFrame.msg
(+6 files in other folders)
