<?xml version="1.0"?>
<package format="2">

  <name>msg_action</name>
  <version>0.0.0</version>
  <description>msg and action used by edge-cloud-slam</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="2112001004@mail2.gdut.edu.cn">edward</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>message_generation</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
</package>
